--- a/src/components/styles/Photo.css
+++ b/src/components/styles/Photo.css
@@ -2,7 +2,7 @@
 .personalPhoto{
     
     height: 150px;
-    width:20% ;
+    width:22% ;
 }
 #avatar{
     border-radius: 50%;
